feat: required shim to make the mod cross platform